--- a/resourceViewer/src/app/CMakeLists.txt
+++ b/resourceViewer/src/app/CMakeLists.txt
@@ -4,4 +4,7 @@ qt_add_executable(resourceViewer
     main.cpp
 )
 
-target_link_libraries(resourceViewer PRIVATE Qt6::Widgets)
+target_link_libraries(resourceViewer PRIVATE
+    resourceGrabber
+    Qt6::Widgets
+)
